# th2analytics_py

./: .gitignore  LICENSE  README.md  __main__.py  call_api.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/th2analytics/: forecasting.py
src/th2analytics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: forecasting_tests.py
th2analytics/: call_forecast_api.py  forecasting.py  forecasting_api.py  th2apis.py
th2analytics.egg-info/: PKG-INFO  SOURCES.txt
